Resume section taken out and replaced with button

--- a/css/index.css
+++ b/css/index.css
@@ -9,3 +9,11 @@
 {
     font-family: 'Space Mono', monospace;
 }
+
+.custom-col
+{
+    width: 20%;
+    margin-left: auto;
+    left: auto;
+    right: auto;
+}
